Update README.md
add the vm options to readme