@@ -1,4 +1,9 @@
 # hackatum_rubberduck
+
+const pc:
+--module-path "C:\Users\Consti10\javafx-sdk-13.0.1\lib" --add-modules javafx.controls,javafx.fxml
+
+
 BikeTheDust project
 HelloWorld!
 
